--- a/rest-api-spring-boot/src/main/resources/application.properties
+++ b/rest-api-spring-boot/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework.web=DEBUG
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=rishab
+spring.datasource.password=rishab
